--- a/Pytorch/3.ipynb
+++ b/Pytorch/3.ipynb
@@ -17,31 +17,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.5989, 0.5052, 0.8556, 0.4582, 0.3045], requires_grad=True)\n",
-      "tensor([2.5989, 2.5052, 2.8556, 2.4582, 2.3045], grad_fn=<AddBackward0>)\n",
-      "tensor(13.0155, grad_fn=<MeanBackward0>)\n",
-      "tensor([2.0791, 2.0042, 2.2845, 1.9666, 1.8436])\n"
+      "tensor([3.0129, 0.6973, 1.5229], requires_grad=True)\n",
+      "tensor([5.0129, 2.6973, 3.5229], grad_fn=<AddBackward0>)\n",
+      "tensor([50.2593, 14.5506, 24.8210], grad_fn=<MulBackward0>)\n",
+      "tensor([ 2.0052, 10.7891,  0.0141])\n"
      ]
     }
    ],
    "source": [
-    "x = torch.rand(5, requires_grad=True)\n",
+    "x = torch.randn(3, requires_grad=True)\n",
     "print(x)\n",
     "y = x + 2\n",
     "print(y)\n",
     "\n",
     "z = y*y*2\n",
-    "z = z.mean()\n",
-    "\n",
+    "# z = z.mean()\n",
     "print(z)\n",
-    "z.backward() #dz/dx\n",
+    "\n",
+    "\n",
+    "v = torch.tensor([0.1, 1.0, 0.001], dtype=torch.float32)\n",
+    "\n",
+    "z.backward(v) #dz/dx\n",
     "print(x.grad)\n",
     "\n"
    ]
