--- a/Pytorch/3.ipynb
+++ b/Pytorch/3.ipynb
@@ -41,12 +41,34 @@
     "# z = z.mean()\n",
     "print(z)\n",
     "\n",
-    "\n",
     "v = torch.tensor([0.1, 1.0, 0.001], dtype=torch.float32)\n",
-    "\n",
     "z.backward(v) #dz/dx\n",
-    "print(x.grad)\n",
-    "\n"
+    "print(x.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.5973e+00,  1.7829e-01, -9.4118e-04], requires_grad=True)\n",
+      "tensor([ 1.5973e+00,  1.7829e-01, -9.4118e-04])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(3, requires_grad=True)\n",
+    "print(x)\n",
+    "\n",
+    "# x.requires_grad_(False)\n",
+    "# x.detach()\n",
+    "\n",
+    "y = x.detach()\n",
+    "print(y)\n"
    ]
   },
   {
