--- a/Pytorch/lect 4.ipynb
+++ b/Pytorch/lect 4.ipynb
@@ -15,7 +15,21 @@
    ],
    "source": [
     "# Backpropagation\n",
-    "print('dfgubishdisdf')"
+    "import torch\n",
+    "\n",
+    "x = torch.tensor(1.0)\n",
+    "y = torch.tensor(2.0)\n",
+    "\n",
+    "w = torch.tensor(1.0, requires_grad=True)\n",
+    "\n",
+    "#forward pass and compute the loss\n",
+    "y_hat = w * x\n",
+    "loss = (y_hat - y)**2\n",
+    "print(loss)\n",
+    "\n",
+    "#backward pass\n",
+    "loss.backward()\n",
+    "print(w.grad)"
    ]
   },
   {
