--- a/Pytorch/lect 4.ipynb
+++ b/Pytorch/lect 4.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dfgubishdisdf\n"
+      "tensor(1., grad_fn=<PowBackward0>)\n",
+      "tensor(-2.)\n"
      ]
     }
    ],
@@ -29,7 +30,9 @@
     "\n",
     "#backward pass\n",
     "loss.backward()\n",
-    "print(w.grad)"
+    "print(w.grad)\n",
+    "\n",
+    "###Update weights "
    ]
   },
   {
