--- a/Object Size detection/code1.ipynb
+++ b/Object Size detection/code1.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mImage\u001b[39m\u001b[39m'\u001b[39m, img)\n\u001b[0;32m     22\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m'\u001b[39m\u001b[39msavedImage.png\u001b[39m\u001b[39m'\u001b[39m,img)\n\u001b[1;32m---> 23\u001b[0m cv2\u001b[39m.\u001b[39;49mwaitKey(\u001b[39m100000\u001b[39;49m)\n\u001b[0;32m     24\u001b[0m cv2\u001b[39m.\u001b[39mdestroyAllWindows()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np \n",
-    "filename = 'R.png'\n",
-    "img = cv2.imread('C:/Users/anifa/Desktop/GITB/ML-and-Data-Science-Project-/Object Size detection/R.png')\n",
+    "\n",
+    "img = cv2.imread('C:/Users/anifa/Desktop/GITB/ML-and-Data-Science-Project-/Object Size detection/9.jpg')\n",
     "# cv2.imshow('Image',img)\n",
     "# cv2.waitKey(100000)\n",
     "# cv2.destroyAllWindows()\n",
@@ -38,12 +26,19 @@
     "    cv2.rectangle(img, (x,y), (x+w, y+h), (0,255,0), 2)\n",
     "    cv2.putText(img, str(area), (x,y), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
     "\n",
-    "filename = 'R_saved.png'\n",
+    "filename = '9_saved.jpg'\n",
     "cv2.imshow('Image', img)\n",
-    "cv2.imwrite('filename,img)\n",
-    "cv2.waitKey(100000)\n",
+    "cv2.imwrite(filename,img)\n",
+    "cv2.waitKey(10000)\n",
     "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
